# telegram-bot-fsafe

./: .env.example  .gitignore  NOTICE.md  README.md  flake.nix  package.yaml  stack.yaml  telegram-bot-fsafe.cabal
example/: Main.hs
examples/: Main.hs
src/Telegram/Bot/: DSLL.hs  FSAfe.hs
src/Telegram/Bot/FSAfe/: BotContextParser.hs  BotM.hs  DSL.hs  FSA.hs  FirstClassFamilies.hs  Message.hs  MessageContext.hs  Reply.hs  RunTG.hs  SendMessage.hs  Start.hs  TaggedContext.hs  UndecidableInstances.hs  Utils.hs
src/Telegram/Bot/FSAfe/FSA/: HandleTransition.hs  ParseTransition.hs  StateMessage.hs
src/Telegram/Bot/FSAfe/Message/: ReplyMarkup.hs
src/Telegram/Bot/FSAfe/Message/ReplyMarkup/: IsCallbackQuery.hs
src/Telegram/Bot/FSAfe/Start/: Internal.hs
