cabal-version:  3.0
name:           telegram-bot-fsafe
version:        0.1.0.0
license:        MIT
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
      Telegram.Bot.FSAfe
      Telegram.Bot.FSAfe.BotContextParser
      Telegram.Bot.FSAfe.BotM
      Telegram.Bot.FSAfe.FSA
      Telegram.Bot.FSAfe.FSA.HandleTransition
      Telegram.Bot.FSAfe.FSA.ParseTransition
      Telegram.Bot.FSAfe.FSA.StateMessage
      Telegram.Bot.FSAfe.Message
      Telegram.Bot.FSAfe.Message.ReplyMarkup
      Telegram.Bot.FSAfe.Message.ReplyMarkup.IsCallbackQuery
      Telegram.Bot.FSAfe.RunTG
      Telegram.Bot.FSAfe.SendMessage
      Telegram.Bot.FSAfe.Start
      Telegram.Bot.FSAfe.Start.Internal
      Telegram.Bot.FSAfe.Utils
  other-modules:
      Paths_telegram_bot_fsafe
  hs-source-dirs:
      src
  default-extensions:
      DataKinds
      FunctionalDependencies
      TypeFamilies
      TypeOperators
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      aeson
    , async
    , base
    , hashable
    , mtl
    , servant-client
    , stm
    , tagged
    , telegram-bot-api
    , text
    , unordered-containers
  default-language: GHC2021

executable telegram-bot-fsafe-example
  main-is: Main.hs
  other-modules:
      Paths_telegram_bot_fsafe
  hs-source-dirs:
      example
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , mtl
    , telegram-bot-api
    , telegram-bot-fsafe
    , text
  default-language: GHC2021
